# analyzer

./: Cargo.toml
src/: inline_dyn.rs  language.rs  lazy.rs  lib.rs  rc_cow.rs  script.rs  slice.rs  token.rs
src/analyzer/: mod.rs  text_analyzer.rs
src/char_filter/: character_filter_layer.rs  mod.rs  regex_character_filter.rs
src/language_detection/: detection.rs  lingua.rs  mod.rs  whatlang.rs  whichlang.rs
src/token_filter/: lower_case.rs  mod.rs  token_filter_layer.rs
src/tokenizer/: mod.rs  token_stream.rs  whitespace_tokenizer.rs
stable_deref_trait-1.2.0/src/: lib.rs
typetag-0.2.16/: .cargo_vcs_info.json  Cargo.toml
typetag-0.2.16/src/: externally.rs  lib.rs  ser.rs
typetag-0.2.16/typetag-impl-0.2.16/: .cargo_vcs_info.json
typetag-0.2.16/typetag-impl-0.2.16/src/: parse.rs  tagged_impl.rs  tagged_trait.rs
